// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render 1`] = `
<div
  className="search-bar"
>
  <Connect(SearchInput)
    count={0}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    isLoading={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query=""
    searchKey="file-search"
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={false}
    showSearchModifiers={true}
    summaryMsg=""
  />
</div>
`;

exports[`doSearch should complete a search 1`] = `"query"`;

exports[`showErrorEmoji false if no query + no results 1`] = `
<div
  className="search-bar"
>
  <Connect(SearchInput)
    count={0}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    isLoading={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query=""
    searchKey="file-search"
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={false}
    showSearchModifiers={true}
    summaryMsg=""
  />
</div>
`;

exports[`showErrorEmoji false if query + results 1`] = `
<div
  className="search-bar"
>
  <Connect(SearchInput)
    count={10}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    isLoading={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query="test"
    searchKey="file-search"
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={false}
    showSearchModifiers={true}
    summaryMsg="NaN of 10 results"
  />
</div>
`;

exports[`showErrorEmoji true if query + no results 1`] = `
<div
  className="search-bar"
>
  <Connect(SearchInput)
    count={0}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    isLoading={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query="test"
    searchKey="file-search"
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={true}
    showSearchModifiers={true}
    summaryMsg="No results found"
  />
</div>
`;
